# ray_tracing

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: SimpleMesh.h  main.cpp  utils.h
src/cpuVersion/: rayMarching.h  rayTracer.h  scene.h
src/cpu_version/: rayTracer.h
src/gpu_version/: camera.h  compute_shader.h  loadShader.h  ray_tracing_compute_shader.h  shape.h
src/meshes/: Bunny-LowPoly.off  bunny.off
src/shaders/: PixelConversion.glsl  RayTracing.glsl  RayTracing.shader  RayTracing_parallel.glsl  loadShader.h
